Session_path intersection in res_cap domain is solved. Next: Parallel transport walks change the transport time modeling.

--- a/TODO
+++ b/TODO
@@ -1,2 +1,7 @@
+Analytical Reasoning:
+- Network Opt_pg:27, fairness of the alloc scheme
+
+
+Implementation:
 - Transit resource lar consumer in ip sini autonomous sekilde degil de "elle"
 girili sekilde aliyorlar.
